--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pipenv==2024.4.0
 platformdirs==4.3.6
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
+python-decouple==3.8
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.2
